--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <meta charset="UTF-8">
         <title>library</title>
         {% for style_path in styles %}
         <link rel="stylesheet" href={{ style_path }}>
