--- a/app/templates/books.html
+++ b/app/templates/books.html
@@ -1,29 +1,46 @@
 <!DOCTYPE html>
 {% extends "base.html" %}
-
 {% block content %}
-    <div>
-        <table>
-            <tr>
-                <th>
-                    Название
-                </th>
-                <th>
-                    Автор
-                </th>
-            </tr>
-                {% for book in books %}
-            <tr>
-                <td>
-                    {{ book.name }}
-                </td>
-                <td>
-                    {% for author in  book.authors %}
-                    {{ author.name }}
-                    {% endfor %}
-                </td>
-            </tr>
+    <div class="library">
+        <div class="table-library">
+            <table>
+                <tr>
+                    <th>
+                        Название
+                    </th>
+                    <th>
+                        Автор
+                    </th>
+                </tr>
+                    {% for author in authors %}
+                        {% for book in author.books %}
+                <tr>
+                    <td>
+                        {{ book.name }}
+                    </td>
+                    <td>
+                        {{ author.name }}
+                    </td>
+                </tr>
+                        {% endfor %}
                 {% endfor %}
-        </table>
+            </table>
+        </div>
+        <div class="rows table-update">
+            <table>
+                <tr>
+                    <th>Изменить</th>
+                </tr>
+                {% for author in authors %}
+                        {% for book in author.books %}
+                <tr>
+                    <td>
+                        <a href="/books/update/{{ author.id }}/{{ book.id }}">x</a>
+                    </td>
+                </tr>
+                    {% endfor %}
+                {% endfor %}
+            </table>
+        </div>
     </div>
 {% endblock %}
