--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,6 +5,7 @@
         {% for style_path in styles %}
         <link rel="stylesheet" href={{ style_path }}>
         {% endfor %}
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     </head>
     <body>
         <div>
