--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,6 +12,7 @@
             Library:
             <a href="/">Home</a>
             <a href="/books">Books</a>
+            <a href="{{ url_for('books_add') }}">Add Book</a>
         </div>
         <hr>
         {% block content %}{% endblock %}
